fixing spacing for extra images gallery

--- a/styles/pages/DetailsDesktop.module.scss
+++ b/styles/pages/DetailsDesktop.module.scss
@@ -54,6 +54,7 @@
 
         .extra_images_gallery_container {
             height: 110px;
+            width: 110px;
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
